# Vera

./: Cargo.toml
.cargo/: config.toml
crates/vera-cli/src/: update_check.rs
crates/vera-cli/src/commands/: config.rs  search.rs  update.rs
crates/vera-core/src/: config.rs  types.rs
crates/vera-core/src/embedding/: provider.rs  tests.rs
crates/vera-core/src/indexing/: update.rs
crates/vera-core/src/retrieval/: dynamic_reranker.rs  hybrid.rs  regex_search.rs  search_service.rs
crates/vera-mcp/src/: tools.rs
crates/vera-serve/: Cargo.toml
crates/vera-serve/src/: auth.rs  caps.rs  config.rs  health.rs  lease.rs  lib.rs  model_slot.rs  routes.rs  serve.rs  version.rs
docs/: features.md  troubleshooting.md
