[package]
name = "vera-serve"
version.workspace = true
edition.workspace = true
description = "Warm inference server for Vera embedding and reranking"
license.workspace = true

[dependencies]
vera-core = { path = "../vera-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = "0.7"
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
